--- a/markdown/基础.md
+++ b/markdown/基础.md
@@ -1,4 +1,7 @@
 ##基础
+### Core Animation
+- 所有的图形iOS应用都包含Core Animation层，所哟的绘图都发生在层至上。
+- Core Animation合成器会混合当前应用与操作系统的层，从而在OpenGL ES的后帧缓存中产生最终的颜色，之后Core Animation合成器切换前后缓存吧合成的内容展示到屏幕上。
 ### 缓存
 - 几乎所有程序提供给GPU的数据都应该放入缓存中。
 - 为缓存提供数据有7个步骤：
