纹理的取样模式

--- a/markdown/纹理.md
+++ b/markdown/纹理.md
@@ -20,4 +20,7 @@
 ### 纹理的取样模式
 - 每个顶点的U，V坐标会附加到 顶点坐标在视口中的最终位置，GPU通过计算每个片元的{U,V}位置，从绑定的纹理中选择纹素，这个过程就叫做取样。取样会将纹理{S,T}坐标系与每个渲染的三角形顶点的{U,V}匹配起来。
 - OpenGL ES支持多个不同的取样模式。当一个有大量纹素的纹理被映射到了帧缓存内一个只覆盖了几个像素的三角形中，或者一个包含少量纹素的纹理被映射到了帧缓存中一个产生大量片元的三角形中。这样都会产生纹素的数量和需要被着色的片元的数量不匹配，这个时候就需要`glTexParameteri()`函数来配置每个绑定的纹理了。
+- OpenGL ES取样模式：![](media/07.jpg)
+
+
 
