--- a/markdown/纹理.md
+++ b/markdown/纹理.md
@@ -22,5 +22,13 @@
 - OpenGL ES支持多个不同的取样模式。当一个有大量纹素的纹理被映射到了帧缓存内一个只覆盖了几个像素的三角形中，或者一个包含少量纹素的纹理被映射到了帧缓存中一个产生大量片元的三角形中。这样都会产生纹素的数量和需要被着色的片元的数量不匹配，这个时候就需要`glTexParameteri()`函数来配置每个绑定的纹理了。
 - OpenGL ES取样模式：![](media/07.jpg)
 
+### MIP贴图
+- MIP贴图与取样密切相关。内存存取是现代图形处理的薄弱环节，当多个纹素对应一个片元的时候，线性取样会导致为了计算一个片元的最终颜色的值而读取多个纹素的颜色值。
+- MIP贴图是为纹理存储多个==细节级别==的技术，高细节的纹理会沿着S轴和T轴存储很多的纹素，弟媳姐的纹理会沿着每个轴存很少的纹素（最少是1）。高细节级别会增加纹素和每个片元的U,V坐标之间紧密的对应关系的可能性。当存在一个紧密关系，GPU就会减少取样纹素的数量，进而减少内存访问次数。
+- 使用MIP贴图会使每个纹理所需要的内存增加了1/3，是在以内存为代价 通过减少GPU取样的数量 来提高显然的性能。
+
+### 使用纹理贴图
+- GLKit03-纹理 项目中使用GLKTextureLoader 和GLKTextureInfo 用户纹理加载和保存纹理信息。![](media/08.jpg)
+
 
 
